added more environment information

--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,12 @@
 # and r-base is limited to only gtk2=2.24.31=hde048ef_0 and
 # r-base=3.5.1=he45234b_1005 but that gtk2 hash has conflict with
 # all ncl versions because of *[track_features=blas_openblas].
+#
+# Lst working ncl-r-base compatibility: ncl=6.4.0/r-base=3.4.1
+# DO NOT use ncl=6.4.0 since the executable needs poppler=0.71.0
+# (it fails); the upgrade from poppler=0.67.0 -> 0.71.0 removes ncl
+# no questions asked and afurther installation of ncls>=6.5.0 will
+# remove r-base no questions asked. Absolute FUBAR!
 
 name: esmvaltool
 channels:
