--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,11 +166,11 @@ jobs:
             dpkg -l > /logs/versions.txt
             conda env export -n base > /logs/build_environment.yml
             # Build conda package
-            conda build . -c conda-forge -c birdhouse > /logs/build_log.txt
+            conda build . -c conda-forge/label/cf201901 -c birdhouse > /logs/build_log.txt
             # Install Python 3 conda package
             conda create -y --name esmvaltool3 > /logs/conda_esmvaltool3.txt 2>&1
             set +x; conda activate esmvaltool3; set -x
-            conda install -y esmvaltool --use-local -c conda-forge -c birdhouse
+            conda install -y esmvaltool --use-local -c conda-forge/label/cf201901 -c birdhouse
             conda env export > /logs/test_environment3.yml
             esmvaltool -h
       - store_artifacts:
@@ -195,7 +195,7 @@ jobs:
             conda create -y --name esmvaltool
             set +x; conda activate esmvaltool; set -x
             # Install
-            conda install -y esmvaltool -c esmvalgroup -c conda-forge -c birdhouse
+            conda install -y esmvaltool -c esmvalgroup -c conda-forge/label/cf201901 -c birdhouse
             # Log versions
             conda env export > /logs/environment.yml
             # Test installation
@@ -237,6 +237,8 @@ workflows:
     jobs:
       - python3_test
       - python3_install
+      - conda_build
+      - conda_install
   nightly:
     triggers:
       - schedule:
