--- a/meta.yaml
+++ b/meta.yaml
@@ -68,11 +68,10 @@ requirements:
     - fiona
     - xlsxwriter
     # Multi language support:
-    - ncl=6.5
+    - ncl>=6.5.0
     - jasper!=1.900.31  # pinned NCL dependency
     - r-base
-    - cdo=1.9.5
-    - hdf5=1.10.3
+    - cdo
     # TODO: add julia
 
 test:
