--- a/esmvaltool/config-developer.yml
+++ b/esmvaltool/config-developer.yml
@@ -165,7 +165,7 @@ CMIP5:
     'sftlf': 'Amon'
     'sftof': 'Omon'
     'volcello': 'Omon'
-  output_file: '[project]_[dataset]_[mip]_[exp]_[ensemble]_[field]_[short_name]_[start_year]-[end_year]'
+  output_file: '[project]_[dataset]_[mip]_[exp]_[ensemble]_[short_name]_[start_year]-[end_year]'
   institutes:
     'ACCESS1-0': ['CSIRO-BOM']
     'ACCESS1-3': ['CSIRO-BOM']
