--- a/esmvaltool/config-developer.yml
+++ b/esmvaltool/config-developer.yml
@@ -21,6 +21,7 @@
 CMIP6:
   input_dir:
     default: '/'
+    ETHZ: '[exp]/[mip]/[short_name]/[dataset]/[ensemble]/[grid]/'
     DKRZ: '[institute]/[dataset]/[exp]/[ensemble]/[mip]/[short_name]/[grid]/[latestversion]'
   input_file: '[short_name]_[mip]_[dataset]_[exp]_[ensemble]_[grid]_*.nc'
   output_file: '[project]_[dataset]_[mip]_[exp]_[ensemble]_[field]_[short_name]_[start_year]-[end_year]'
