--- a/environment.yml
+++ b/environment.yml
@@ -34,4 +34,4 @@ dependencies:
   - jasper!=1.900.31  # pinned NCL dependency
   - r-base
   - libunwind  # Needed for Python3.7+
-  - julia
+  - julia=0.6.1 # 1.0.3 from conda-forge does not work properly
