julia from apt and lintr from conda as in #654

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - checkout
       - run:
           command: |
-            apt update && apt -y install build-essential gfortran
+            apt update && apt -y install build-essential gfortran julia
             # Create a file to checksum as cache key
             date --rfc-3339 date > cache_key.txt
             cat environment.yml >> cache_key.txt
@@ -55,7 +55,7 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
             set +x; conda activate esmvaltool; set -x
@@ -100,7 +100,7 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
             set +x; conda activate esmvaltool; set -x
@@ -132,7 +132,7 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
             set +x; conda activate esmvaltool; set -x
@@ -160,7 +160,7 @@ jobs:
             # Install prerequisites
             mkdir /logs
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda_base.txt 2>&1
             conda install -y conda-build conda-verify >> /logs/conda_base.txt 2>&1
             # Log versions
@@ -190,7 +190,7 @@ jobs:
             # Install prerequisites
             mkdir /logs
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             # Create and activate conda environment
             conda create -y --name esmvaltool
@@ -218,7 +218,7 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda create -y --name ncl > /logs/conda.txt 2>&1
             set +x; conda activate ncl; set -x
